--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,18 +15,18 @@
     <!--<string name="menu_tools">Tools</string>-->
     <!--<string name="menu_share">Share</string>-->
     <!--<string name="menu_send">Send</string>-->
-    <string name="menu_home">Trang chủ</string>
-    <string name="menu_dk">Đăng ký học kỳ phụ</string>
-    <string name="menu_dkxt">Đăng ký xét tuyển</string>
-    <string name="menu_tchs">Tra cứu hồ sơ</string>
-    <string name="menu_tthv">Thông tin học vụ</string>
-    <string name="menu_tt">Thanh toán</string>
-    <string name="menu_qlcn">Quản lý thông tin cá nhân</string>
-    <string name="menu_qlsv">Quản lý danh sách sinh viên</string>
-    <string name="title_activity_dkxt">Dkxt</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="title_activity_dang_ky_xet_tuyen">DangKyXetTuyen</string>
+<!--    <string name="menu_home">Trang chủ</string>-->
+<!--    <string name="menu_dk">Đăng ký học kỳ phụ</string>-->
+<!--    <string name="menu_dkxt">Đăng ký xét tuyển</string>-->
+<!--    <string name="menu_tchs">Tra cứu hồ sơ</string>-->
+<!--    <string name="menu_tthv">Thông tin học vụ</string>-->
+<!--    <string name="menu_tt">Thanh toán</string>-->
+<!--    <string name="menu_qlcn">Quản lý thông tin cá nhân</string>-->
+<!--    <string name="menu_qlsv">Quản lý danh sách sinh viên</string>-->
+<!--    <string name="title_activity_dkxt">Dkxt</string>-->
+<!--    <string name="tab_text_1">Tab 1</string>-->
+<!--    <string name="tab_text_2">Tab 2</string>-->
+<!--    <string name="title_activity_dang_ky_xet_tuyen">DangKyXetTuyen</string>-->
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
